--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install pyinstaller pyyaml xmltodict
 
-      - name: Build exe for Task8.py
-      run: pyinstaller --onefile Task8.py
-      working-directory: ${{ github.workspace }}
+      - name: Build
+        run: |
+          pyinstaller --onefile Task8.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: program
-          path: Task8/dist/
-
-
+          path: dist/program.exe
